--- a/submit/templates/submit/start_submission.html
+++ b/submit/templates/submit/start_submission.html
@@ -3,6 +3,7 @@
 {% block main %}
     <h1>Start Submission</h1>
     <form method="post" action="{% url 'submit:report' %}">
+        {% csrf_token %}
         <button type="submit">Start a Report</button>
     </form>
 {% endblock %}
